<!-- C21361681 – Michael Traynor
     Centralised UI text -->
<resources>
    <string name="app_name">Giggy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_giggy">Join Giggy</string>
    <string name="register_artist">Register as Artist</string>
    <string name="register_venue">Register as Venue</string>
    <string name="find_gigs">Find gigs and showcase your talent</string>
    <string name="book_artists">Book artists for your events</string>
    <string name="artist_name">Artist Name</string>
    <string name="create_account">Create Account</string>
    <string name="change_account_type">Change account type</string>
    <string name="back">Back</string>

    <string-array name="genres">
        <item>Rock</item>
        <item>Pop</item>
        <item>Traditional/Folk</item>
        <item>Jazz</item>
        <item>Blues</item>
        <item>Classical</item>
        <item>Country</item>
        <item>Electronic</item>
        <item>Hip-Hop/R&amp;B</item>
        <item>Soul/Funk</item>
        <item>Comedy/Other</item>
    </string-array>

    <string-array name="genres_with_any">
        <item>Any</item>
        <item>Rock</item>
        <item>Pop</item>
        <item>Traditional/Folk</item>
        <item>Jazz</item>
        <item>Blues</item>
        <item>Classical</item>
        <item>Country</item>
        <item>Electronic</item>
        <item>Hip-Hop/R&amp;B</item>
        <item>Soul/Funk</item>
        <item>Comedy/Other</item>
    </string-array>
</resources>
