<!-- C21361681 – Michael Traynor
     Login screen -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/giggy_black">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="24dp"
        android:gravity="center_horizontal">

        <include layout="@layout/include_logo" />
        <Space android:layout_width="0dp" android:layout_height="36dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent" android:layout_height="52dp"
            android:autofillHints=""
            android:hint="@string/email" android:textColorHint="@color/giggy_hint"
            android:textColor="@color/giggy_text" android:padding="14dp"
            android:background="@drawable/dark_input"
            android:inputType="textEmailAddress"/>

        <Space android:layout_width="0dp" android:layout_height="12dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent" android:layout_height="52dp"
            android:autofillHints=""
            android:hint="@string/password" android:textColorHint="@color/giggy_hint"
            android:textColor="@color/giggy_text" android:padding="14dp"
            android:background="@drawable/dark_input"
            android:inputType="textPassword"/>

        <Space android:layout_width="0dp" android:layout_height="20dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent" android:layout_height="56dp"
            android:text="@string/login" android:textStyle="bold"
            android:textColor="@color/giggy_black" android:background="@drawable/green_button"
            app:backgroundTint="@null"/>

        <Space android:layout_width="0dp" android:layout_height="20dp"/>

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/no_account" android:textColor="@color/giggy_text"/>

        <Button
            android:id="@+id/btnGoSignup"
            android:layout_width="180dp" android:layout_height="44dp"
            android:text="@string/sign_up" android:textAllCaps="false"
            android:textColor="@color/giggy_black" android:backgroundTint="@color/giggy_card"
            android:background="@drawable/card"/>
        <Space android:layout_width="0dp" android:layout_height="10dp"/>

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/forgot_password" android:textColor="@color/giggy_green"/>
    </LinearLayout>
</ScrollView>
